--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
                                 <a class="nav-link active a-menu" href="{{ site.baseurl }}/features">FEATURES</a>
                             </li>
                             <li class="nav-item" role="presentation">
-                                <a class="nav-link active a-menu" href="{{ site.baseurl }}/wip">DOCS</a>
+                                <a class="nav-link active a-menu" href="https://docs.steamulate.tk">DOCS</a>
                             </li>
                             <li class="dropdown">
                                 <a class="dropdown-toggle nav-link dropdown-toggle active a-menu" id="a-dropdown" data-toggle="dropdown" aria-expanded="false" href="#">MORE</a>
