Add instant page script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,8 +69,9 @@
             <p class="copyright">EunoWare © 2019</p>
             <p class="copyright">All trademarks are property of their respective owners in the US and other countries. We are not affiliated with Valve or Steam in any form.</p>
         </footer>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/js/bootstrap.bundle.min.js"></script>
-		<script src="{{ site.baseurl }}/js/main.js"></script>
+	<script src="{{ site.baseurl }}/js/main.js"></script>
+	<script src="//instant.page/1.1.0" type="module" integrity="sha384-EwBObn5QAxP8f09iemwAJljc+sU+eUXeL9vSBw1eNmVarwhKk2F9vBEpaN9rsrtp"></script>
 	</body>
 </html>
