--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <main>
     <section>
-        <div class="div-header" style="background-image:url({{ site.baseurl }}{{ page.image }})">
+        <div class="div-header" style="background-image:url({{ site.baseurl }}{{ page.image }}); background-position:center bottom">
             <h1 class="text-center h1-header-title">{{ page.title }}</h1>
             <h2 class="text-center h2-header-desc">{{ page.description }}</h2>
         </div>
