--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,12 @@
 	</head>
 	<body>
         <header id="header"><div>
+        	<div class="alert alert-warning alert-dismissible fade show" role="alert">
+        	<strong>Important note: </strong> Steamulate has been temporarily removed from App Store. <a class="alert-link" href="{{ site.baseurl }}/removal">Learn More</a>
+        	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            	<span aria-hidden="true">&times;</span>
+        	</button>
+        	</div>
             <nav class="navbar navbar-expand-md fixed-top nav-dark" id="navbar">
                 <div class="container-fluid">
                     <a class="navbar-brand a-logo" href="{{ site.url }}">STEAMULATE</a>
