--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,12 +27,6 @@
 	</head>
 	<body>
         <header id="header"><div>
-        	<div class="alert alert-warning alert-dismissible fade show" role="alert">
-        	<strong>Important note: </strong> Steamulate has been temporarily removed from App Store. <a class="alert-link" href="{{ site.baseurl }}/removal">Learn More</a>
-        	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
-            	<span aria-hidden="true">&times;</span>
-        	</button>
-        	</div>
             <nav class="navbar navbar-expand-md fixed-top nav-dark" id="navbar">
                 <div class="container-fluid">
                     <a class="navbar-brand a-logo" href="{{ site.url }}">STEAMULATE</a>
@@ -74,6 +68,12 @@
             </ul>
             <p class="copyright">EunoWare © 2020</p>
             <p class="copyright">All trademarks are property of their respective owners in the US and other countries. We are not affiliated with Valve or Steam in any form.</p>
+			<div class="alert alert-warning alert-dismissible fade show fixed-bottom" role="alert">
+        	<strong>Important note: </strong> Steamulate has been temporarily removed from App Store. <a class="alert-link" href="{{ site.baseurl }}/removal">Learn More</a>
+        	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            	<span aria-hidden="true">&times;</span>
+        	</button>
+        	</div>
         </footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.0/js/bootstrap.bundle.min.js"></script>
