--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,7 +68,7 @@
             </ul>
             <p class="copyright">EunoWare © 2020</p>
             <p class="copyright">All trademarks are property of their respective owners in the US and other countries. We are not affiliated with Valve or Steam in any form.</p>
-			<div class="alert alert-warning alert-dismissible fade show fixed-bottom" role="alert">
+			<div class="alert alert-warning alert-dismissible fade show fixed-bottom div-alert" role="alert">
         	<strong>Important note: </strong> Steamulate has been temporarily removed from App Store. <a class="alert-link" href="{{ site.baseurl }}/removal">Learn More</a>
         	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
             	<span aria-hidden="true">&times;</span>
